--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@astrojs/solid-js": "^2.2.0",
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.6.5",
+    "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "solid-js": "^1.4.3",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "tailwindcss-3d": "^0.2.4"
+    "tailwindcss-3d": "^0.2.4",
+    "tailwindcss-animate": "^1.0.6"
   },
   "packageManager": "yarn@3.6.1"
 }
